Project feedback_data {
  database_type: "MySQL"
  Note: "ERD section for Feedback Data."
}

Table account {
  account_id int [pk, increment]
  phone_number varchar(20) [unique, not null]
  email varchar(100)
  first_name varchar(50)
  last_name varchar(50)
  role varchar(50)
}

Table product {
  product_id int [pk, increment]
  product_name varchar(255) [not null]
  price decimal(15,0) [not null]
  status bit
  lifecycle_status varchar(30) [not null]
}

Table feedback {
  feedback_id int [pk, increment]
  account_id int [not null]
  product_id int [not null]
  comment varchar(500)
  rating int
  comment_status varchar(50)
  reply varchar(500)
  created_at datetime
}

Ref: feedback.account_id > account.account_id
Ref: feedback.product_id > product.product_id
